--- a/karabiner-reload/source/info.plist
+++ b/karabiner-reload/source/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>com.nikivi.karabiner</string>
+	<string>nikivi.karabiner</string>
 	<key>category</key>
 	<string>Mine</string>
 	<key>connections</key>
@@ -277,7 +277,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.2</string>
+	<string>1.0.4</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
