--- a/file-actions/source/info.plist
+++ b/file-actions/source/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>nikivi.file.actions.2</string>
+	<string>nikivi.file.actions</string>
 	<key>category</key>
 	<string>Mine</string>
 	<key>connections</key>
@@ -1168,7 +1168,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.6</string>
+	<string>1.0.7</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
