--- a/useful-utilities/source/info.plist
+++ b/useful-utilities/source/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>com.nikivi.utilities</string>
+	<string>nikivi.utilities</string>
 	<key>category</key>
 	<string>Mine</string>
 	<key>connections</key>
@@ -211,7 +211,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.0</string>
+	<string>1.0.1</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
