--- a/search-websites/source/info.plist
+++ b/search-websites/source/info.plist
@@ -5,7 +5,7 @@
 	<key>bundleid</key>
 	<string>nikivi.search-the-web</string>
 	<key>category</key>
-	<string>Productivity</string>
+	<string>Mine</string>
 	<key>connections</key>
 	<dict>
 		<key>05FF6367-EE22-4B61-BFE1-D7CEBBC7C071</key>
@@ -55,18 +55,7 @@
 			</dict>
 		</array>
 		<key>361061D4-A7FF-4AFA-9405-B5E62E78806F</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>2A1F7FF8-4C04-417D-800D-B0426E7532E4</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>37ED8832-1FD5-46E1-8AE2-59AF11022A93</key>
 		<array>
 			<dict>
@@ -906,7 +895,7 @@
 				<key>keyword</key>
 				<string>sgithub</string>
 				<key>subtext</key>
-				<string>⌥ = most stars | FN = Most forks</string>
+				<string>⌥ = Most stars | FN = Most forks</string>
 				<key>text</key>
 				<string>Best match | ⌃ = Latest | ⌘ = Top users</string>
 				<key>withspace</key>
@@ -1043,8 +1032,6 @@ fi</string>
 			<integer>2</integer>
 		</dict>
 		<dict>
-			<key>config</key>
-			<dict/>
 			<key>type</key>
 			<string>alfred.workflow.utility.junction</string>
 			<key>uid</key>
